# sitewatcher

./: .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  metrics.py  worker.py
chart/: Chart.yaml  pod-monitoring.yaml  values.yaml
chart/templates/: app.yaml  monitor.yaml  redis.yaml
manifest/: app.yaml  monitor.yaml  redis.yaml
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/tf-state/: main.tf  variables.tf
